2006-11-30  Adam Roben  <aroben@apple.com>

        Reviewed by Beth.

        Put code in place to use WebCore context menus when they are turned
        on.

        * WebView/WebHTMLView.m:
        (-[NSArray menuForEvent:]):

2006-11-29  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Oliver.

        Keep preferences separate from the rest of the client, making sure we are using expected preference values.
        This lets the inspector work when plugins are disabled for the WebView.

        * WebInspector/WebInspector.m:
        (-[NSWindow window]):

2006-11-29  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Tim.

        Add back methods in WebCoreStatistics that are still used by Tiger Safari.
        
        * Misc/WebCoreStatistics.h:
        * Misc/WebCoreStatistics.m:
        (+[WebCoreStatistics emptyCache]):
        (+[WebCoreStatistics setCacheDisabled:]):

2006-11-28  Alice Liu  <alice.liu@apple.com>

        Reviewed by Maciej.

        A fix for a couple failing layout tests involving copy/cut in iframes.

        * WebCoreSupport/WebEditorClient.h:
        * WebCoreSupport/WebEditorClient.mm:
        (WebEditorClient::dataForArchivedSelection):
        Use the frame parameter instead of using the webview's selectedFrame. 

2006-11-28  Beth Dakin  <bdakin@apple.com>

        Reviewed by Geoffff.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=11691 REGRESSION 
        (r17399, r17511): WebElementDictionary no longer returns nil 
        NSStrings

        String's NSString* operator converts null Strings to empty 
        NSStrings for compatibility with AppKit. We need to work around 
        that here.

        * Misc/WebElementDictionary.m:
        (NSStringOrNil):
        (-[WebElementDictionary _altDisplayString]):
        (-[WebElementDictionary _spellingToolTip]):
        (-[WebElementDictionary _title]):
        (-[WebElementDictionary _titleDisplayString]):
        (-[WebElementDictionary _textContent]):